feat: code the design of calculator

--- a/index.html
+++ b/index.html
@@ -5,8 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <main>
+      <section class="calculator">
+        <div class="display-container">
+          <div class="display">
+            <output class="user-input">user-input</output>
+            <output class="result">result</output>
+          </div>
+        </div>
+        <div class="buttons">
+          <button class="clear" id="all-clear">AC</button>
+          <button class="clear" id="clear">C</button>
+          <button class="operator" id="remainder">%</button>
+          <button class="operator" id="divide">÷</button>
+          <button id="digit-7">7</button>
+          <button id="digit-8">8</button>
+          <button id="digit-9">9</button>
+          <button class="operator" id="plus">+</button>
+          <button id="digit-4">4</button>
+          <button id="digit-5">5</button>
+          <button id="digit-6">6</button>
+          <button class="operator" id="minus">-</button>
+          <button id="digit-1">1</button>
+          <button id="digit-2">2</button>
+          <button id="digit-3">3</button>
+          <button class="operator" id="multiply">×</button>
+          <button id="digit-0">0</button>
+          <button id="decimal">.</button>
+          <button class="operator" id="equals">=</button>
+        </div>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
