feat: make all of the calculator buttons work

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <section class="calculator">
         <div class="display-container">
           <div class="display">
-            <output class="user-input">user-input</output>
-            <output class="result">result</output>
+            <output class="user-input">0</output>
+            <output class="result"></output>
           </div>
         </div>
         <div class="buttons">
@@ -24,21 +24,21 @@
           <button class="clear" id="clear">C</button>
           <button class="operator" id="remainder">%</button>
           <button class="operator" id="divide">÷</button>
-          <button id="digit-7">7</button>
-          <button id="digit-8">8</button>
-          <button id="digit-9">9</button>
+          <button class="digits" id="digit-7">7</button>
+          <button class="digits" id="digit-8">8</button>
+          <button class="digits" id="digit-9">9</button>
           <button class="operator" id="plus">+</button>
-          <button id="digit-4">4</button>
-          <button id="digit-5">5</button>
-          <button id="digit-6">6</button>
+          <button class="digits" id="digit-4">4</button>
+          <button class="digits" id="digit-5">5</button>
+          <button class="digits" id="digit-6">6</button>
           <button class="operator" id="minus">-</button>
-          <button id="digit-1">1</button>
-          <button id="digit-2">2</button>
-          <button id="digit-3">3</button>
+          <button class="digits" id="digit-1">1</button>
+          <button class="digits" id="digit-2">2</button>
+          <button class="digits" id="digit-3">3</button>
           <button class="operator" id="multiply">×</button>
-          <button id="digit-0">0</button>
+          <button class="digits" id="digit-0">0</button>
           <button id="decimal">.</button>
-          <button class="operator" id="equals">=</button>
+          <button id="equals">=</button>
         </div>
       </section>
     </main>
